修改打包错误
1. 修改依赖文件夹
2. 增加maven-shade-plugin配置